# test-mobile

./: Cargo.toml
mobile-template/android/app/: build.gradle.kts
mobile-template/iOS/TEST_MOBILE_PROJECT_NAME_CAMEL_CASE.xcodeproj/: project.pbxproj
test-mobile/: Cargo.toml
test-mobile-game/: Cargo.toml
test-mobile/src/: main.rs
