[package]
authors = ["Vladas Zakrevksis <146100@gmail.com>"]
description = "Mobile project generator for test-engine"
edition = "2024"
homepage = "https://github.com/gebling-studio/test-mobile"
license = "MIT OR Apache-2.0"
name = "test-mobile"
repository = "https://github.com/gebling-studio/test-mobile"
version = "0.6.2"

[[bin]]
name = "test-mobile"

[dependencies]
anyhow = { workspace = true }
convert_case = { workspace = true }
structopt = { workspace = true }
toml = { workspace = true }
